@@ -18,6 +18,9 @@ Version 1.2-svn
  * multiplayer
    * game management
      * fixed controler change not sended to all client (bug #8138)
+     * replace "Downloading next level..." by "Receiving data..."
+       when scenario don't have next_scenario and replace
+       "Downloading next level..." by "Downloading next scenario..."
 
 Version 1.2:
  * campaigns:
